test/mpi/errors/coll/Makefile.sm
INCLUDES = -I../../include -I${srcdir}/../../include
LDADD = ../../util/mtest.o
DEPADD = @MPILIBLOC@ ../../util/mtest.o
smvar_do_sharedlibs = 0

# Use extra programs to list programs that should not be built by default.
EXTRA_PROGRAMS      = 

noalias_SOURCES     = noalias.c
rerr_SOURCES        = rerr.c
bcastlength_SOURCES = bcastlength.c

../../util/mtest.o:
	(cd ../../util && $(MAKE) mtest.o)
